<resources>
    <string name="app_name">Dash - Lite</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_run">Run Setup</string>
    <string name="run_map_start_run_button">Start Run</string>
    <string name="run_setup_start_run_button">Continue</string>
    <string name="run_map_restart_run_button">Continue</string>
    <string name="run_map_cancel_button">Cancel</string>
    <string name="run_fragment_time_label">Time</string>
    <string name="run_fragment_distance_label">Distance</string>
    <string name="run_pause_button">Pause</string>
    <string name="run_calories_label">Calories</string>
    <string name="run_avg_pace_label">Avg Pace</string>
    <string name="run_cal_measurement_label">kcal</string>
    <string name="run_elevation_change_label">Elevation Change</string>
    <string name="run_end_run">End Run</string>
    <string name="run_setup_training_button_text">Training</string>
    <string name="run_setup_custom_button_text">Custom</string>
    <string name="no_segments_selected_text">No segments selected. You can add segments with the + button below. Or click "CONTINUE" to proceed without segments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="calorie_header">Calories</string>

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="menu_item_settings">Preferences</string>
    <string name="run_detail">Run Detail</string>
    <string name="preferences_title">Preferences</string>
    <string name="timeElapsedString">Run Time: %1$s</string>
    <string name="totalDistanceStringM">Distance: %1$.1f Kilometers</string>
    <string name="totalDistanceStringImp">Distance: %1$.1f Miles</string>
    <string name="totalDistanceM">%1$.1f Miles</string>
    <string name="totalDistanceImp">%1$.1f Miles</string>
    <string name="dateString">Date: %1$s</string>
    <string name="runSegmentText">%1$s %2$s %3$s(s)</string>
    <string name="totalElevationChange">%1.1f %2$s</string>
    <string name="runDetailDateTimes">%1$s - %2$s</string>
    <string name="halfway_there">Halfway there</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="outdoor">Outdoor</string>
    <string name="plus_icon">Plus Icon</string>
    <string name="good_job">Good Job</string>
    <string name="almost_there">Almost There</string>
    <string name="keep_going">Keep Going</string>
    <string name="custom_message">Custom Message</string>
    <string name="calories">Calories</string>
    <string name="elevation">Elevation</string>
    <string name="treadmill">Treadmill</string>
    <string name="run_icon">Run Icon</string>
    <string name="walk_icon">Walk Icon</string>
    <string name="alert_icon">Alert Icon</string>
    <string name="segments">Segments</string>
    <string name="more_information">More Information</string>
    <string name="trainingRunCompletedDate">Completed %1$s</string>

    <string name="estimate_calories_preference">estimate_calories</string>
    <string name="metric_preference">metric</string>
    <string name="halfway_cue_preference">halfway_cue</string>
    <string name="height_feet_preference">height_feet</string>
    <string name="height_inches_preference">height_inches</string>
    <string name="height_cm_preference">height_cm</string>
    <string name="weight_lbs_preference">weight_lbs</string>
    <string name="weight_kilo_preference">weight_kilo</string>
    <string name="age_preference">age</string>
    <string name="ask_background_loc_preference">ask_background_loc</string>
</resources>
